--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/akrabalcool/reskodeBlog#readme",
   "dependencies": {
+    "@prisma/client": "^3.5.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "prisma": "^3.5.0"
   },
   "type": "module"
